# csp

./: .gitignore  .releaserc  CHANGELOG.md  Cargo.toml
.github/workflows/: ci.yaml
api/ordinals/: .releaserc  README.md  package-lock.json  package.json
api/ordinals/src/: env.ts  index.ts
api/ordinals/src/api/: init.ts  schemas.ts
api/ordinals/src/pg/: pg-store.ts  types.ts
api/ordinals/tests/: helpers.ts  setup.ts
api/ordinals/tests/api/: cache.test.ts
components/chainhook-postgres/: Cargo.toml
components/chainhook-postgres/src/: lib.rs  pg_numeric_u128.rs  pg_numeric_u64.rs  pg_smallint_u8.rs  utils.rs
components/chainhook-postgres/src/types/: mod.rs  pg_bigint_u32.rs  pg_numeric_i64.rs  pg_numeric_u128.rs  pg_numeric_u64.rs  pg_smallint_u8.rs
components/ordhook-cli/src/cli/: mod.rs
components/ordhook-cli/src/config/: file.rs
components/ordhook-core/: Cargo.toml
components/ordhook-core/src/: lib.rs
components/ordhook-sdk-js/src/: ordinals_indexer.rs
dockerfiles/components/: ordhook.dockerfile
migrations/ordinals/: V10__counts_by_sat_rarity.sql  V11__counts_by_type.sql  V12__counts_by_address.sql  V13__counts_by_genesis_address.sql  V14__counts_by_recursive.sql  V1__satoshis.sql  V2__inscriptions.sql  V3__locations.sql  V4__current_locations.sql  V5__inscription_transfers.sql  V6__chain_tip.sql  V7__inscription_recursions.sql  V8__counts_by_block.sql  V9__counts_by_mime_type.sql
migrations/ordinals-brc20/: V1__tokens.sql  V2__operations.sql  V3__balances.sql  V4__counts_by_operation.sql  V5__counts_by_address_operation.sql
(+57 files in other folders)
