[package]
name = "chainhook-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.3"
num-traits = "0.2.14"
tokio-postgres = "0.7.10"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
refinery = { version = "0.8", features = ["tokio-postgres"] }

[dev-dependencies]
test-case = "3.1.0"
